--- a/Calcurltu/index.html
+++ b/Calcurltu/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -227,7 +228,7 @@
 
          <section class="healthy mt-5">
                  <div class="container">
-                    <div class="row">
+                    <div class="row healthys">
                        <div class="col-xl-6 col-md-12 col-12">
                         <div class="healthy-image">
                             <img src="./assest/images/Rectangle 1688.png" style="width: 100%; height: 100%" alt="image">
@@ -374,7 +375,7 @@
      <footer>
         <div class="container">
             <div class="row mt-5">
-                <div class="row">
+                <div class="row mx-auto">
                     <div class="col col-12 col-sm-6 col-md-4 col-lg logo-footer">
                         <a href="">
                             <img src="./assest/images/logo.png" alt="">
