--- a/Detail/index.html
+++ b/Detail/index.html
@@ -135,7 +135,7 @@
                        <div class="infomation-col d-flex justify-content-evenly align-items-center">
                         <div class="holtel d-flex justify-content-between align-items-center">
                             <div class="hotel-icon">
-                               <a href="#"> <img src="./assest/images/Vector-1.png" alt="image" style="color: #fff;"></a>
+                               <a href="#"> <i class="fas fa-phone-alt"></i></a>
                             </div>
                             <div class="hotel-phone">
                                 <p>Hotline</p>
@@ -145,7 +145,7 @@
                             <div class="top-bar"></div>
                           <div class="email d-flex justify-content-between align-items-center">
                               <div class="email-icon">
-                                <a href="#">  <img src="./assest/images/Vector6.png"  alt="image"></a>
+                                <a href="#"> <i class="far fa-envelope"></i></a>
                               </div>
                               <div class="email-name">
                                   <p>Email</p>
@@ -446,7 +446,7 @@
     <footer>
         <div class="container">
             <div class="row mt-5">
-                <div class="row">
+                <div class="row mx-auto">
                     <div class="col col-12 col-sm-6 col-md-4 col-lg logo-footer">
                         <a href="">
                             <img src="./assest/images/logo.png" alt="">
