--- a/detailnew&blog/detailnew&bog.html
+++ b/detailnew&blog/detailnew&bog.html
@@ -54,7 +54,7 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
           <div class="offcanvas-header">
             <div class="image">
-              <img src="./assets/img/logo.png" alt="image">
+              <img src="./assets/img/Logo React Plus-Final-04 1.png" alt="image">
             </div>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
