update link nav

--- a/Detail/index.html
+++ b/Detail/index.html
@@ -21,20 +21,20 @@
   
                  <div class="col-10 nav-menu_right" >
                      <ul class="nav-ul">
-                         <li><a href="#">Trang chủ</a></li>
-                         <li><a href="#">Giới thiệu <img class="vertor" src="./assest/images/Vector 2.png" alt="image"></a>
+                         <li><a href="/BT_ASM/trangchu/trangchu">Trang chủ</a></li>
+                         <li><a href="/BT_ASM/gioithieu/gioithieu">Giới thiệu <img class="vertor" src="./assest/images/Vector 2.png" alt="image"></a>
                             <ul class="submenu">
-                                <li><a href="#">Về React & React Native</a></li>
+                                <li><a href="/BT_ASM/about/about">Về React & React Native</a></li>
                                 <li><a href="#">Công ty React Plus</a></li>
                                 <li><a href="#">Các khoá đào tạo</a></li>
                                 <li><a href="#">Sự kiện thường kỳ</a></li>
                                </ul>
                         
                         </li>
-                         <li><a href="#">Văn hóa </a></li>
+                         <li><a href="/BT_ASM/Calcurltu/index">Văn hóa </a></li>
                          <li><a href="#">Tuyển dụng</a></li>
-                         <li><a href="#">Đào tạo & Sự kiện</a></li>
-                         <li><a href="#">Vì cộng đồng</a></li>
+                         <li><a href="/BT_ASM/event/event">Đào tạo & Sự kiện</a></li>
+                         <li><a href="/BT_ASM/educate/educate">Vì cộng đồng</a></li>
                          <li><a href="#">Tin tức & Blog</a></li>
                      </ul>
                      <a  class="navbar-mobile" type="button" data-bs-toggle="offcanvas"  data-bs-target="#offcanvasRight"  aria-controls="offcanvasRight">
@@ -134,15 +134,15 @@
                    <div class="ReactPlus-Career mt-2">
                        <div class="infomation-col d-flex justify-content-evenly align-items-center">
                         <div class="holtel d-flex justify-content-between align-items-center">
-                            <div class="hotel-icon">
-                               <a href="#"> <i class="fas fa-phone-alt"></i></a>
-                            </div>
-                            <div class="hotel-phone">
-                                <p>Hotline</p>
-                                <p>034 9177 306</p>
+                                <div class="hotel-icon">
+                                    <a href="#"> <i class="fas fa-phone-alt"></i></a>
+                                 </div>
+                                 <div class="hotel-phone">
+                                     <p>Hotline</p>
+                                     <p>034 9177 306</p>
                             </div>
                           </div>
-                            <div class="top-bar"></div>
+                          <div class="top-bar"></div>
                           <div class="email d-flex justify-content-between align-items-center">
                               <div class="email-icon">
                                 <a href="#"> <i class="far fa-envelope"></i></a>
@@ -423,16 +423,25 @@
                             <h4>Job liên quan</h4>
                         </div>
                         <div class="location-join">
-                         <a href="#">   <p>Thực tập sinh lập trình React Native</p></a>
+                            <div style="width: 3px; height: 18px; background: #0BBEE7;"></div>
+                        <div>
+                            <a href="#"><p>Thực tập sinh lập trình React Native</p></a>
                             <p>Hà Nội</p>
                         </div>
-                        <div class="location-join">
-                         <a href="#"> <p>Lập trình viên React</p></a>
-                            <p>Hà Nội</p>
                         </div>
                         <div class="location-join">
-                          <a href="#">  <p>Thực tập sinh lập trình React Native</p></a>
-                            <p>Hà Nội</p>
+                            <div style="width: 3px; height: 18px; background: #0BBEE7;"></div>
+                            <div>
+                                <a href="#"> <p>Lập trình viên React</p></a>
+                                <p>Hà Nội</p>
+                            </div>
+                        </div>
+                        <div class="location-join">
+                            <div style="width: 3px; height: 18px; background: #0BBEE7;"></div>
+                            <div>
+                                <a href="#">  <p>Thực tập sinh lập trình React Native</p></a>
+                                <p>Hà Nội</p>
+                            </div>
                         </div>
                        </div>
                         
@@ -447,7 +456,7 @@
         <div class="container">
             <div class="row mt-5">
                 <div class="row mx-auto">
-                    <div class="col col-12 col-sm-6 col-md-4 col-lg logo-footer">
+                    <div class="col-xl-4 col-12 col-sm-6 col-md-4 col-lg logo-footer">
                         <a href="">
                             <img src="./assest/images/logo.png" alt="">
                         </a>
@@ -456,7 +465,7 @@
                             24 Nguyễn Cơ Thạch, Nam Từ Liêm, Hà Nội
                         </p>
                     </div>
-                    <div class="col col-12 col-sm-6 col-md-4 col-lg  community-footer">
+                    <div class="col-xl-2 col-12 col-sm-6 col-md-4 col-lg  community-footer">
                         <ul>
                             <li><a class="community" href="">Cộng đồng</a></li>
                             <li><a class="community-item" href="">Đào tạo & Sự kiện</a></li>
@@ -465,7 +474,7 @@
 
                         </ul>
                     </div>
-                    <div class="col col-12 col-sm-6 col-md-4 col-lg community-footer">
+                    <div class="col-xl-2 col-12 col-sm-6 col-md-4 col-lg community-footer">
                         <ul>
                             <li><a class="community" href="">Công ty</a></li>
                             <li><a class="community-item" href="">Giới thiệu</a></li>
@@ -474,7 +483,7 @@
 
                         </ul>
                     </div>
-                    <div class="col col-12 col-sm-6 col-md-4 col-lg community-footer">
+                    <div class="col-xl-2 col-12 col-sm-6 col-md-4 col-lg community-footer">
                         <ul>
                             <li><a class="community" href="">Liên Hệ</a></li>
                             <li><a class="community-item" href=""><img src="./assest/images/Vector-1.png" alt="">0349177306 </a>
@@ -483,7 +492,7 @@
                              </li>
                         </ul>
                     </div>
-                    <div class="col col-12 col-sm-6 col-md-4 col-lg connection-footer">
+                    <div class="col-xl-2col-12 col-sm-6 col-md-4 col-lg connection-footer">
                         <a class="connection" href="">kết nối với chúng tôi</a>
                         <div class="connection-footer-icon">
                             <div class="connection-img">
