--- a/event/event.html
+++ b/event/event.html
@@ -30,20 +30,20 @@
 
                 <div class="col-10 nav-menu_right">
                     <ul class="nav-ul">
-                        <li><a href="#">Trang chủ</a></li>
-                        <li><a href="#">Giới thiệu <img class="vertor" src="./assest/img/gt.png" alt="image"></a>
+                        <li><a href="/BT_ASM/trangchu/trangchu">Trang chủ</a></li>
+                        <li><a href="http://127.0.0.1:5500/BT_ASM/gioithieu/gioithieu">Giới thiệu <img class="vertor" src="./assest/img/gt.png" alt="image"></a>
                             <ul class="submenu">
-                                <li><a href="#">Về React & React Native</a></li>
+                                <li><a href="/BT_ASM/about/about">Về React & React Native</a></li>
                                 <li><a href="#">Công ty React Plus</a></li>
                                 <li><a href="#">Các khoá đào tạo</a></li>
                                 <li><a href="#">Sự kiện thường kỳ</a></li>
                             </ul>
 
                         </li>
-                        <li><a href="#">Văn hóa </a></li>
+                        <li><a href="/BT_ASM/Calcurltu/index">Văn hóa </a></li>
                         <li><a href="#">Tuyển dụng</a></li>
-                        <li><a href="#">Đào tạo & Sự kiện</a></li>
-                        <li><a href="#">Vì cộng đồng</a></li>
+                        <li><a href="/BT_ASM/event/event">Đào tạo & Sự kiện</a></li>
+                        <li><a href="/BT_ASM/educate/educate">Vì cộng đồng</a></li>
                         <li><a href="#">Tin tức & Blog</a></li>
                     </ul>
                     <a class="navbar-mobile" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
