--- a/pageForm/index.html
+++ b/pageForm/index.html
@@ -28,22 +28,22 @@
       </li>
   
         <li class="nav-item">
-          <a class="nav-link " href="#">Trang chủ</a>
+          <a class="nav-link " href="/BT_ASM/trangchu/trangchu">Trang chủ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="#">Giới thiệu</a>
+          <a class="nav-link " href="/BT_ASM/gioithieu/gioithieu">Giới thiệu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="#">Văn hóa</a>
+          <a class="nav-link " href="/BT_ASM/Calcurltu/index">Văn hóa</a>
         </li>
         <li class="nav-item">
           <a class="nav-link " href="#">Tuyển dụng</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">Đào tạo&Sự kiện</a>
+          <a class="nav-link active" href="/BT_ASM/event/event">Đào tạo&Sự kiện</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="#">Vì cộng đồng</a>
+          <a class="nav-link " href="/BT_ASM/educate/educate">Vì cộng đồng</a>
         </li>
         <li class="nav-item">
           <a class="nav-link " href="#">Tin tức&Blog</a>
