--- a/pageRoadMap/index.html
+++ b/pageRoadMap/index.html
@@ -36,12 +36,12 @@
           <div class="container">
             <nav class="nav header-child1">
               <img src="./img/Logo React Plus-Final-04 1.png" />
-              <a class="nav-link active" href="#">Trang chủ</a>
-              <a class="nav-link" href="#">Giới thiệu</a>
-              <a class="nav-link" href="#">Văn hóa</a>
+              <a class="nav-link active" href="/BT_ASM/trangchu/trangchu">Trang chủ</a>
+              <a class="nav-link" href="/BT_ASM/gioithieu/gioithieu">Giới thiệu</a>
+              <a class="nav-link" href="/BT_ASM/Calcurltu/index">Văn hóa</a>
               <a class="nav-link" href="#">Tuyển dụng</a>
-              <a class="nav-link" href="#">Đào  &Sự Kiện</a>
-              <a class="nav-link" href="#">Vì cộng đồng</a>
+              <a class="nav-link" href="/BT_ASM/event/event.html">Đào  &Sự Kiện</a>
+              <a class="nav-link" href="/BT_ASM/educate/educate">Vì cộng đồng</a>
               <a class="nav-link" href="#">Tin tức&Blog</a>
             </nav>
             <div class="header-child2">
