--- a/new&blog/new&blog.html
+++ b/new&blog/new&blog.html
@@ -25,8 +25,8 @@
 
         <div class="col-10 nav-menu_right">
           <ul class="nav-ul">
-            <li><a href="#">Trang chủ</a></li>
-            <li><a href="#">Giới thiệu <img class="vertor" src="./assets/img/Vector.png" alt="image"></a>
+            <li><a href="/BT_ASM/trangchu/trangchu">Trang chủ</a></li>
+            <li><a href="/BT_ASM/gioithieu/gioithieu">Giới thiệu <img class="vertor" src="./assets/img/Vector.png" alt="image"></a>
               <ul class="submenu">
                 <li><a href="#">Về React & React Native</a></li>
                 <li><a href="#">Công ty React Plus</a></li>
@@ -35,10 +35,10 @@
               </ul>
 
             </li>
-            <li><a href="#">Văn hóa </a></li>
+            <li><a href="/BT_ASM/Calcurltu/index">Văn hóa </a></li>
             <li><a href="#">Tuyển dụng</a></li>
-            <li><a href="#">Đào tạo & Sự kiện</a></li>
-            <li><a href="#">Vì cộng đồng</a></li>
+            <li><a href="/BT_ASM/event/event">Đào tạo & Sự kiện</a></li>
+            <li><a href="/BT_ASM/educate/educate">Vì cộng đồng</a></li>
             <li><a href="#">Tin tức & Blog</a></li>
           </ul>
           <a class="navbar-mobile" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
