--- a/event/event.html
+++ b/event/event.html
@@ -31,7 +31,7 @@
                 <div class="col-10 nav-menu_right">
                     <ul class="nav-ul">
                         <li><a href="/BT_ASM/trangchu/trangchu">Trang chủ</a></li>
-                        <li><a href="http://127.0.0.1:5500/BT_ASM/gioithieu/gioithieu">Giới thiệu <img class="vertor" src="./assest/img/gt.png" alt="image"></a>
+                        <li><a href="/BT_ASM/gioithieu/gioithieu">Giới thiệu <img class="vertor" src="./assest/img/gt.png" alt="image"></a>
                             <ul class="submenu">
                                 <li><a href="/BT_ASM/about/about">Về React & React Native</a></li>
                                 <li><a href="#">Công ty React Plus</a></li>
