--- a/pageRoadMap/index.html
+++ b/pageRoadMap/index.html
@@ -39,10 +39,10 @@
               <a class="nav-link active" href="/BT_ASM/trangchu/trangchu">Trang chủ</a>
               <a class="nav-link" href="/BT_ASM/gioithieu/gioithieu">Giới thiệu</a>
               <a class="nav-link" href="/BT_ASM/Calcurltu/index">Văn hóa</a>
-              <a class="nav-link" href="#">Tuyển dụng</a>
-              <a class="nav-link" href="/BT_ASM/event/event.html">Đào  &Sự Kiện</a>
-              <a class="nav-link" href="/BT_ASM/educate/educate">Vì cộng đồng</a>
-              <a class="nav-link" href="#">Tin tức&Blog</a>
+              <a class="nav-link" href="/BT_ASM/pageRoadMap/index">Tuyển dụng</a>
+              <a class="nav-link" href="/BT_ASM/chungtay/chungtay">Đào  &Sự Kiện</a>
+              <a class="nav-link" href="/BT_ASM/chungtay/chungtay">Vì cộng đồng</a>
+              <a class="nav-link" href="/BT_ASM/new&blog/new&blog">Tin tức&Blog</a>
             </nav>
             <div class="header-child2">
               <h2>ReactPlus Career</h2>
@@ -117,7 +117,7 @@
                         Chuyên viên chăm sóc khách hàng
                       </h5>
                       <a
-                        href="#"
+                        href="/BT_ASM/Detail/index"
                         class="btn btn-outline-primary recruitment-content-btn"
                         >Xem chi tiết <i class="fas fa-arrow-right"></i
                       ></a>
@@ -146,7 +146,7 @@
                         Lập trình viên React
                       </h5>
                       <a
-                        href="#"
+                        href="/BT_ASM/Detail/index"
                         class="btn btn-outline-primary recruitment-content-btn"
                         >Xem chi tiết <i class="fas fa-arrow-right"></i
                       ></a>
@@ -175,7 +175,7 @@
                         Thực tập sinh lập trình React Native
                       </h5>
                       <a
-                        href="#"
+                        href="/BT_ASM/Detail/index"
                         class="btn btn-outline-primary recruitment-content-btn"
                         >Xem chi tiết <i class="fas fa-arrow-right"></i
                       ></a>
@@ -205,7 +205,7 @@
                         Lập trình viên React
                       </h5>
                       <a
-                        href="#"
+                        href="/BT_ASM/Detail/index"
                         class="btn btn-outline-primary recruitment-content-btn"
                         >Xem chi tiết <i class="fas fa-arrow-right"></i
                       ></a>
@@ -234,7 +234,7 @@
                         Thực tập sinh lập trình React Native
                       </h5>
                       <a
-                        href="#"
+                        href="/BT_ASM/Detail/index"
                         class="btn btn-outline-primary recruitment-content-btn"
                         >Xem chi tiết <i class="fas fa-arrow-right"></i
                       ></a>
@@ -263,7 +263,7 @@
                         Chuyên viên chăm sóc khách hàng
                       </h5>
                       <a
-                        href="#"
+                        href="/BT_ASM/Detail/index"
                         class="btn btn-outline-primary recruitment-content-btn"
                         >Xem chi tiết <i class="fas fa-arrow-right"></i
                       ></a>
