--- a/Detail/index.html
+++ b/Detail/index.html
@@ -32,10 +32,10 @@
                         
                         </li>
                          <li><a href="/BT_ASM/Calcurltu/index">Văn hóa </a></li>
-                         <li><a href="#">Tuyển dụng</a></li>
+                         <li><a href="/BT_ASM/pageRoadMap/index">Tuyển dụng</a></li>
                          <li><a href="/BT_ASM/event/event">Đào tạo & Sự kiện</a></li>
-                         <li><a href="/BT_ASM/educate/educate">Vì cộng đồng</a></li>
-                         <li><a href="#">Tin tức & Blog</a></li>
+                         <li><a href="/BT_ASM/chungtay/chungtay">Vì cộng đồng</a></li>
+                         <li><a href="/BT_ASM/new&blog/new&blog">Tin tức & Blog</a></li>
                      </ul>
                      <a  class="navbar-mobile" type="button" data-bs-toggle="offcanvas"  data-bs-target="#offcanvasRight"  aria-controls="offcanvasRight">
                         <i class="fas fa-bars" style="color: #fff; display: flex; justify-content: flex-end; align-items: flex-end; font-size: 25px;"></i>
