--- a/detailnew&blog/detailnew&bog.html
+++ b/detailnew&blog/detailnew&bog.html
@@ -29,21 +29,21 @@
 
         <div class="col-10 nav-menu_right">
           <ul class="nav-ul">
-            <li><a href="#">Trang chủ</a></li>
-            <li><a href="#">Giới thiệu <img class="vertor" src="./assets/img/Vector.png" alt="image"></a>
+            <li><a href="/BT_ASM/trangchu/trangchu">Trang chủ</a></li>
+            <li><a href="/BT_ASM/gioithieu/gioithieu">Giới thiệu <img class="vertor" src="./assets/img/Vector.png" alt="image"></a>
               <ul class="submenu">
-                <li><a href="#">Về React & React Native</a></li>
+                <li><a href="/BT_ASM/about/about">Về React & React Native</a></li>
                 <li><a href="#">Công ty React Plus</a></li>
                 <li><a href="#">Các khoá đào tạo</a></li>
                 <li><a href="#">Sự kiện thường kỳ</a></li>
               </ul>
 
             </li>
-            <li><a href="#">Văn hóa </a></li>
-            <li><a href="#">Tuyển dụng</a></li>
-            <li><a href="#">Đào tạo & Sự kiện</a></li>
-            <li><a href="#">Vì cộng đồng</a></li>
-            <li><a href="#">Tin tức & Blog</a></li>
+            <li><a href="/BT_ASM/Calcurltu/index">Văn hóa </a></li>
+            <li><a href="/BT_ASM/pageRoadMap/index">Tuyển dụng</a></li>
+            <li><a href="/BT_ASM/event/event">Đào tạo & Sự kiện</a></li>
+            <li><a href="/BT_ASM/chungtay/chungtay">Vì cộng đồng</a></li>
+            <li><a href="/BT_ASM/new&blog/new&blog">Tin tức & Blog</a></li>
           </ul>
           <a class="navbar-mobile" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
             aria-controls="offcanvasRight">
