--- a/educate/educate.html
+++ b/educate/educate.html
@@ -37,10 +37,10 @@
 
                         </li>
                         <li><a href="/BT_ASM/Calcurltu/index">Văn hóa </a></li>
-                        <li><a href="#">Tuyển dụng</a></li>
+                        <li><a href="/BT_ASM/pageRoadMap/index">Tuyển dụng</a></li>
                         <li><a href="/BT_ASM/event/event">Đào tạo & Sự kiện</a></li>
-                        <li><a href="/BT_ASM/educate/educate">Vì cộng đồng</a></li>
-                        <li><a href="#">Tin tức & Blog</a></li>
+                        <li><a href="/BT_ASM/chungtay/chungtay">Vì cộng đồng</a></li>
+                        <li><a href="/BT_ASM/new&blog/new&blog">Tin tức & Blog</a></li>
                     </ul>
                     <a class="navbar-mobile" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
                         aria-controls="offcanvasRight">
@@ -207,7 +207,7 @@
                         <div class="row mb-5 d-flex justify-content-end ">
 
                             <div class="col-12 col-sm-2 col-md-2 col-lg-3 col-xl-2 comment-img ">
-                                <img class="text-center" src="./img/1.png">
+                                <img class="text-center" src="./assest/img/1.png">
                             </div>
                             <div class="col-12 col-sm-10 col-md-10 col-lg-9 col-xl-10 comment-title">
                                 <p>
