--- a/gioithieu/gioithieu.html
+++ b/gioithieu/gioithieu.html
@@ -8,11 +8,8 @@
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="./assets/css/gioithieu.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -38,10 +35,10 @@
 
             </li>
             <li><a href="/BT_ASM/Calcurltu/index">Văn hóa </a></li>
-            <li><a href="#">Tuyển dụng</a></li>
-            <li><a href="/BT_ASM/event/event.html">Đào tạo & Sự kiện</a></li>
-            <li><a href="/BT_ASM/educate/educate">Vì cộng đồng</a></li>
-            <li><a href="#">Tin tức & Blog</a></li>
+            <li><a href="/BT_ASM/pageRoadMap/index">Tuyển dụng</a></li>
+            <li><a href="/BT_ASM/event/event">Đào tạo & Sự kiện</a></li>
+            <li><a href="/BT_ASM/chungtay/chungtay">Vì cộng đồng</a></li>
+            <li><a href="/BT_ASM/new&blog/new&blog">Tin tức & Blog</a></li>
           </ul>
           <a class="navbar-mobile" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
             aria-controls="offcanvasRight">
@@ -52,7 +49,7 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
           <div class="offcanvas-header">
             <div class="image">
-              <img src="./assest/images/logo.png" alt="image">
+              <img src="./assets/img/logo.png" alt="image">
             </div>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
@@ -372,6 +369,7 @@
       <span class="bottom-footer">© React Plus, JSC 2021. All rights reserved.</span>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
