--- a/trangchu/trangchu.html
+++ b/trangchu/trangchu.html
@@ -9,10 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/trangchu.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 
 <body>
@@ -30,7 +27,7 @@
             <li><a href="/BT_ASM/trangchu/trangchu">Trang chủ</a></li>
             <li><a href="/BT_ASM/gioithieu/gioithieu">Giới thiệu <img class="vertor" src="./assets/img/vt.png" alt="image"></a>
               <ul class="submenu">
-                <li><a href="BT_ASM/about/about.html">Về React & React Native</a></li>
+                <li><a href="BT_ASM/about/about">Về React & React Native</a></li>
                 <li><a href="#">Công ty React Plus</a></li>
                 <li><a href="#">Các khoá đào tạo</a></li>
                 <li><a href="#">Sự kiện thường kỳ</a></li>
@@ -38,10 +35,10 @@
 
             </li>
             <li><a href="/BT_ASM/Calcurltu/index">Văn hóa </a></li>
-            <li><a href="#">Tuyển dụng</a></li>
-            <li><a href="/BT_ASM/event/event.html">Đào tạo & Sự kiện</a></li>
-            <li><a href="/BT_ASM/educate/educate">Vì cộng đồng</a></li>
-            <li><a href="#">Tin tức & Blog</a></li>
+            <li><a href="/BT_ASM/pageRoadMap/index">Tuyển dụng</a></li>
+            <li><a href="/BT_ASM/event/event">Đào tạo & Sự kiện</a></li>
+            <li><a href="/BT_ASM/chungtay/chungtay">Vì cộng đồng</a></li>
+            <li><a href="/BT_ASM/new&blog/new&blog">Tin tức & Blog</a></li>
           </ul>
           <a class="navbar-mobile" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
             aria-controls="offcanvasRight">
@@ -52,7 +49,7 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
           <div class="offcanvas-header">
             <div class="image">
-              <img src="./assest/images/logo.png" alt="image">
+              <img src="./assets/img/logo.png" alt="image">
             </div>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
