--- a/detailnew&blog/detailnew&bog.html
+++ b/detailnew&blog/detailnew&bog.html
@@ -62,7 +62,7 @@
             <div class="accordion" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <a class="accordion-buttons">
+                  <a class="accordion-buttons" href="/BT_ASM/trangchu/trangchu">
                     Trang chủ
                   </a>
                 </h2>
@@ -70,16 +70,16 @@
 
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseThree">
+                  <a class="accordion-button collapsed d-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseThree" href="/BT_ASM/gioithieu/gioithieu">
                     Giới thiệu
-                  </button>
+                  </a>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                   data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="#">Về React & React Native</a></li>
+                      <li><a href="BT_ASM/about/about">Về React & React Native</a></li>
                       <li><a href="#">Công ty React Plus</a></li>
                       <li><a href="#">Các khoá đào tạo</a></li>
                       <li><a href="#">Sự kiện thường kỳ</a></li>
@@ -90,7 +90,7 @@
 
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <a class="accordion-buttons">
+                  <a class="accordion-buttons" href="/BT_ASM/Calcurltu/index">
                     Văn hóa
                   </a>
                 </h2>
@@ -98,17 +98,17 @@
 
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <a class="accordion-buttons">
+                  <a class="accordion-buttons" href="/BT_ASM/pageRoadMap/index">
                     Tuyển dụng
                   </a>
                 </h2>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <a class="accordion-button collapsed d-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" href="/BT_ASM/event/event">
                     Đào tạo & Sự kiện
-                  </button>
+                  </a>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                   data-bs-parent="#accordionExample">
@@ -126,14 +126,14 @@
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <a class="accordion-buttons">
+                  <a class="accordion-buttons" href="/BT_ASM/chungtay/chungtay">
                     Vì Cộng đồng
                   </a>
                 </h2>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <a class="accordion-buttons">
+                  <a class="accordion-buttons" href="/BT_ASM/new&blog/new&blog">
                     Tin tức & Blog
                   </a>
                 </h2>
