--- a/pageForm/index.html
+++ b/pageForm/index.html
@@ -83,7 +83,7 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                       <ul>
-                        <li><a href="BT_ASM/about/about">Về React & React Native</a></li>
+                        <li><a href="/BT_ASM/about/about">Về React & React Native</a></li>
                         <li><a href="#">Công ty React Plus</a></li>
                         <li><a href="#">Các khoá đào tạo</a></li>
                         <li><a href="#">Sự kiện thường kỳ</a></li>
